--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <!-- Шапка сайта -->
+    <!--header, Шапка сайта -->
     <header>
       <nav>
         <a href="/" class="logo-link">
@@ -24,7 +23,7 @@
         <ul class="auth-nav list">            
           <li>
               <img src="./image/envelope.svg" alt="envelope">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+              <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
           <li>
               <img src="./image/smartphone.svg" alt="smartphone">
               <a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
@@ -32,12 +31,12 @@
       </nav>
     </header>
     <main>
-      <!-- главная  -->
+      <!-- general главная  -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
         <a href="" class="button">Заказать услугу</a>
       </section>
-      <!-- Преимущества -->
+      <!-- Features Преимущества -->
       <section class="section">
         <h2>Внимание к деталям </h2> <!--невидимый заголовок h2-->
         <ul class="feature-list list">
@@ -75,7 +74,7 @@
           </li>
         </ul>
       </section>
-      <!-- Примеры работ -->
+      <!--exemple work Примеры работ -->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
 
@@ -94,7 +93,7 @@
           </li>
         </ul>
       </section>
-      <!-- данные команды -->
+      <!-- Team data, данные команды -->
       <section class="section">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
@@ -208,7 +207,7 @@
           </li>
         </ul>
       </section>
-       <!-- логотипы компаний-->
+       <!-- company logo логотипы компаний-->
        <section>
         <h2>Постоянные клиенты</h2>
 
@@ -247,7 +246,7 @@
       </section>
     </main>
 
-    <!-- Футер -->
+    <!-- footer, Футер -->
     <footer class="footer">
       <a href="/" class="logo-link">
         <span class="logo">Web</span>
