--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">   
-    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-    <!-- Шапка сайта -->
+    <!-- header, Шапка сайта -->
     <header>
         <nav>
           <a href="/" class="logo-link">
@@ -24,7 +23,7 @@
           <ul class="auth-nav list">            
             <li>
                 <img src="./image/envelope.svg" alt="envelope">
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
             <li>
                 <img src="./image/smartphone.svg" alt="smartphone">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
@@ -65,8 +64,8 @@
                     <a href="">
                         <img src="./image/portfolio1.jpg" alt="">
                     </a>                    
-                    <h3><a href="">Технокряк</a></h3>                
-                    <p><a href="">Веб-сайт</a></p>
+                    <h3><a href="" class="link-title">Технокряк</a></h3>                
+                    <p><a href="" class="link">Веб-сайт</a></p>
                 
                     <p>Технокряк это современная 
                         площадка распространения коронавируса. 
@@ -79,111 +78,93 @@
                     <a href="">
                         <img src="./image/portfolio2.jpg" alt="">
                     </a>
-                    <h3><a href="">
-                        Постер New Orlean vs Golden Star</a></h3>
-                    <p><a href="">Дизайн</a></p>
+                    <h3><a href="" class="link-title">Постер New Orlean vs Golden Star</a></h3>
+                    <p><a href="" class="link">Дизайн</a></p>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Deserunt suscipit dolores 
                         veritatis blanditiis odit nam iusto, omnis 
-                        vero numquam, eos doloribus voluptas in, 
-                        porro quia beatae fugit ut quis iste.</p>
+                        .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio3.jpg" alt=""></a>
-                        <h3><a href="">Ресторан Seafood</a></h3> 
-                        <p><a href="">Приложение</a></p>                       
+                        <h3><a href="" class="link-title">Ресторан Seafood</a></h3> 
+                        <p><a href="" class="link">Приложение</a></p>                       
                         <p>Lorem ipsum dolor sit amet consectetur 
                             adipisicing elit. Deserunt suscipit dolores 
                             veritatis blanditiis odit nam iusto, omnis 
-                            vero numquam, eos doloribus voluptas in, 
-                            porro quia beatae fugit ut quis iste.</p>
+                            .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio4.jpg" alt="">
                     </a>
-                    <a href="">
-                        <h3>Проект Prime</h3>
-                    </a>
-                    <a href="">
-                        <p>Маркетинг</p>
-                    </a>
+                        <h3><a href="" class="link-title">Проект Prime</a></h3>
+                        <p><a href="" class="link">Маркетинг</a></p>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Deserunt suscipit dolores 
                         veritatis blanditiis odit nam iusto, omnis 
-                        vero numquam, eos doloribus voluptas in, 
-                        porro quia beatae fugit ut quis iste.</p>
+                        .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio5.jpg" alt="">
                     </a>
-                    <a href="">
-                        <h3>Проект Boxes</h3>
-                    </a>
-                    <a href="">
-                        <p>Приложение</p>
-                    </a>
+                        <h3><a href="" class="link-title">Проект Boxes</a></h3>
+                        <p><a href="" class="link">Приложение</a></p>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Deserunt suscipit dolores 
                         veritatis blanditiis odit nam iusto, omnis 
-                        vero numquam, eos doloribus voluptas in, 
-                        porro quia beatae fugit ut quis iste.</p>
+                        .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio6.jpg" alt="">
                     </a>
-                    <a href="">
-                        <h3>Inspiration has no Borders</h3>
-                    </a>
-                    <a href="">
-                        <p>Веб-сайт</p>
-                    </a>
+                        <h3><a href="" class="link-title">Inspiration has no Borders</a></h3>
+                        <p><a href="" class="link">Веб-сайт</a></p>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Deserunt suscipit dolores 
                         veritatis blanditiis odit nam iusto, omnis 
-                        vero numquam, eos doloribus voluptas in, 
-                        porro quia beatae fugit ut quis iste.</p>
+                        .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio7.jpg" alt="">
                     </a>
-                    <a href="">
-                        <h3>Издание Limited Edition</h3>
-                    </a>
-                    <a href="">
-                        <p>Дизайн</p>
-                    </a>
+                        <h3><a href="" class="link-title">Издание Limited Edition</a></h3>
+                        <p><a href="" class="link">Дизайн</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Deserunt suscipit dolores 
+                        veritatis blanditiis odit nam iusto, omnis 
+                        .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio8.jpg" alt="">
                     </a>
-                    <a href="">
-                        <h3>Проект LAB</h3>
-                    </a>
-                    <a href="">
-                        <p>Маркетинг</p>
-                    </a>
+                        <h3><a href="" class="link-title">Проект LAB</a></h3>
+                        <p><a href="" class="link">Маркетинг</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Deserunt suscipit dolores 
+                        veritatis blanditiis odit nam iusto, omnis 
+                        .</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio9.jpg" alt="">
                     </a>
-                    <a href="">
-                        <h3>Growing Business</h3>
-                    </a>
-                    <a href="">
-                        <p>Приложение</p>
-                    </a>
+                      <h3><a href="" class="link-title">Growing Business</a></h3>                    
+                      <p><a href="" class="link">Приложение</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Deserunt suscipit dolores 
+                        veritatis blanditiis odit nam iusto, omnis 
+                        .</p>
                 </li>
             </ul>
         </section>
       </main>
- <!-- Футер -->
+ <!-- footer, Футер -->
     <footer class="footer">
       <a href="/" class="logo-link">
         <span class="logo">Web</span>
