--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
             <ul class="carts-list list">
                 <li>
                     <a href="">
-                        <img src="./image/portfolio1.jpg" alt="">
+                        <img src="./image/portfolio1.jpg" alt="notebook">
                     </a>                    
                     <h3><a href="" class="link-title">Технокряк</a></h3>                
                     <p><a href="" class="link">Веб-сайт</a></p>
@@ -76,7 +76,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio2.jpg" alt="">
+                        <img src="./image/portfolio2.jpg" alt="basketbolist">
                     </a>
                     <h3><a href="" class="link-title">Постер New Orlean vs Golden Star</a></h3>
                     <p><a href="" class="link">Дизайн</a></p>
@@ -87,7 +87,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio3.jpg" alt=""></a>
+                        <img src="./image/portfolio3.jpg" alt="shark"></a>
                         <h3><a href="" class="link-title">Ресторан Seafood</a></h3> 
                         <p><a href="" class="link">Приложение</a></p>                       
                         <p>Lorem ipsum dolor sit amet consectetur 
@@ -97,7 +97,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio4.jpg" alt="">
+                        <img src="./image/portfolio4.jpg" alt="headphones">
                     </a>
                         <h3><a href="" class="link-title">Проект Prime</a></h3>
                         <p><a href="" class="link">Маркетинг</a></p>
@@ -108,7 +108,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio5.jpg" alt="">
+                        <img src="./image/portfolio5.jpg" alt="Boxes">
                     </a>
                         <h3><a href="" class="link-title">Проект Boxes</a></h3>
                         <p><a href="" class="link">Приложение</a></p>
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio6.jpg" alt="">
+                        <img src="./image/portfolio6.jpg" alt="IMAC">
                     </a>
                         <h3><a href="" class="link-title">Inspiration has no Borders</a></h3>
                         <p><a href="" class="link">Веб-сайт</a></p>
@@ -130,7 +130,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio7.jpg" alt="">
+                        <img src="./image/portfolio7.jpg" alt="magazin">
                     </a>
                         <h3><a href="" class="link-title">Издание Limited Edition</a></h3>
                         <p><a href="" class="link">Дизайн</a></p>
@@ -141,7 +141,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio8.jpg" alt="">
+                        <img src="./image/portfolio8.jpg" alt="label">
                     </a>
                         <h3><a href="" class="link-title">Проект LAB</a></h3>
                         <p><a href="" class="link">Маркетинг</a></p>
@@ -152,7 +152,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="./image/portfolio9.jpg" alt="">
+                        <img src="./image/portfolio9.jpg" alt="MacBook">
                     </a>
                       <h3><a href="" class="link-title">Growing Business</a></h3>                    
                       <p><a href="" class="link">Приложение</a></p>
