логотип ведет на главную страницу index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--header, Шапка сайта -->
     <header>
       <nav>
-        <a href="/" class="logo-link">
+        <a href="./index.html" class="logo-link">
           <span class="logo">Web</span>
           <span class="logo-black"> Studio</span>
         </a>        
