change filter <a> to <button> and  <nav> to <div>

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,25 +36,26 @@
 
           <h1>PORTFOLIO</h1> <!--неаидимый заголовок-->
           <!-- -->
-          <nav>
+          <div>
           <ul class="portfolio-filter list">
               <li> 
-                  <a href="" class="link">Все</a>
+                  <button class="filter-button">Все</button>
+                  
               </li>
               <li>
-                  <a href="" class="link" >Веб-сайты</a>
+                  <button class="filter-button">Веб-сайты</button>
               </li>
               <li>
-                  <a href="" class="link">Приложения</a>
+                  <button class="filter-button">Приложения</button>
               </li>
               <li>
-                  <a href="" class="link">Дизайн</a>
+                  <button class="filter-button">Дизайн</button>
             </li>
               <li>
-                  <a href="" class="link">Маркетинг</a>
+                  <button class="filter-button">Маркетинг</button>
               </li>
           </ul>
-        </nav>
+        </div>
 
         <!-- portfolio carts -->
 
